--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -41,7 +41,7 @@ textarea
 
 .userstoryedit-lightning-mdpreview
     +mdpreview
-    background-color: white
+    background-color: #FFF
     color: #16325C
     border: 1px solid #D8DDE6
     border-radius: 4px
@@ -65,7 +65,7 @@ textarea
 
 .userstoryedit-classic-mdpreview
     +mdpreview
-    font-family: Ubuntu, 'Lucida Grande', Arial, Helvetica, sans-serif
+    font-family: Ubuntu, 'Lucida Grande', sans-serif
     padding: 8px 6px
     min-width: 220px
     font-size: 12px
