--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -23,7 +23,7 @@ textarea
 
 =mdpreview-bug
     padding: 0px
-    font-family: 'Arial', 'Helvetica', sans-serif
+    font-family: sans-serif
     color: #000
     font-size: 13px
     box-shadow: 0px 0px 3px rgba(0, 0, 0, .15)
