textTransform function improved so it doesnt look broken on GUS anymore

--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -89,3 +89,9 @@ div.slds-modal__container
 #userStoryWorkPage\:storyWorkForm\:detailsInput\:formRow\:input
     height: 160px !important
 
+.bugedit-lightning-mdpreview ul
+    list-style: initial !important
+
+.bugedit-lightning-mdpreview ol
+    list-style-type: decimal !important;
+
