--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -93,5 +93,25 @@ div.slds-modal__container
     list-style: initial !important
 
 .bugedit-lightning-mdpreview ol
-    list-style-type: decimal !important;
+    list-style-type: decimal !important
+
+.userstoryedit-lightning-mdpreview ul
+    list-style: initial !important
+
+.userstoryedit-lightning-mdpreview ol
+    list-style-type: decimal !important
+
+.uiOutputTextArea ul
+    list-style: initial !important
+    padding-left: 25px
+
+.uiOutputTextArea ol
+    list-style-type: decimal !important
+    padding-left: 25px
+
+pre
+    margin: 0px
+    padding: 2px 4px
+    background-color: #F3F3F3
+    border-radius: 4px
 
