--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -110,8 +110,10 @@ div.slds-modal__container
     padding-left: 25px
 
 pre
-    margin: 0px
-    padding: 2px 4px
-    background-color: #F3F3F3
+    max-height: 200px
+    background-color: #F4F6F9
+    border: 1px solid #D8DDE6
     border-radius: 4px
+    margin: 10px 0px 10px 0px
+    padding: 3px 5px 5px 0px
 
