work manager, getting ready to merge with bugfix branch

--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -37,6 +37,17 @@ textarea
     box-shadow: 0px 0px 3px rgba(0, 0, 0, .15)
     border: 1px solid #B6B6B6
 
+.work-manager-mdpreview
+    display: block;
+    height: 134px;
+    border: 1px solid #D8DDE6;
+    border-radius: 4px;
+    box-shadow: none;
+    padding: 8px 12px;
+    color: #16325c;
+    font-size: 14px;
+    line-height: 19px;
+    overflow: auto;
 
 .bugedit-lightning-mdpreview
     +mdpreview
