--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -12,12 +12,12 @@ textarea
     margin: 8px 0px !important
 
 =pre
-    max-height: 155px;
-    background-color: #F4F6F9;
-    border: 1px solid #D8DDE6;
-    border-radius: 4px;
-    margin: 10px 0px 10px 0px;
-    padding: 3px 0px 5px 5px;
+    max-height: 155px
+    background-color: #F4F6F9
+    border: 1px solid #D8DDE6
+    border-radius: 4px
+    margin: 10px 0px 10px 0px
+    padding: 3px 0px 5px 5px
 
 
 =mdpreview
@@ -40,22 +40,22 @@ textarea
     border: 1px solid #B6B6B6
 
 =classic-code
-    background: #fcfdfd;
-    border: 1px solid #cfd4d9;
-    padding: 0px 3px 0px 3px;
-    border-radius: 3px;
+    background: #fcfdfd
+    border: 1px solid #cfd4d9
+    padding: 0px 3px 0px 3px
+    border-radius: 3px
 
 .work-manager-mdpreview
-    display: block;
-    height: 134px;
-    border: 1px solid #D8DDE6;
-    border-radius: 4px;
-    box-shadow: none;
-    padding: 8px 12px;
-    color: #16325c;
-    font-size: 14px;
-    line-height: 19px;
-    overflow: auto;
+    display: block
+    height: 134px
+    border: 1px solid #D8DDE6
+    border-radius: 4px
+    box-shadow: none
+    padding: 8px 12px
+    color: #16325c
+    font-size: 14px
+    line-height: 19px
+    overflow: auto
 
 .bugedit-lightning-mdpreview
     +mdpreview
