--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -40,8 +40,8 @@ textarea
     border: 1px solid #B6B6B6
 
 =classic-code
-    background: #fcfdfd
-    border: 1px solid #cfd4d9
+    background: #FCFDFD
+    border: 1px solid #CFD4D9
     padding: 0px 3px 0px 3px
     border-radius: 3px
 
