--- a/src/styles/extensionStyles.sass
+++ b/src/styles/extensionStyles.sass
@@ -52,7 +52,7 @@ textarea
     border-radius: 4px
     box-shadow: none
     padding: 8px 12px
-    color: #16325c
+    color: #16325C
     font-size: 14px
     line-height: 19px
     overflow: auto
